# race-of-sloths

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Messages.staging.toml  Messages.toml  Rocket.toml  fly.prod.toml  fly.staging.toml  fly.toml  grafana-dashboard.json  init.json  mock.json  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: data-removal.md  feedback-template.md  new-project-template.md
.github/workflows/: cd.yaml  ci.yaml  issue_creation.yaml
bot/: Cargo.toml
bot/src/: main.rs  messages.rs
bot/src/api/: mod.rs  prometheus.rs  telegram.rs
bot/src/events/: common.rs  mod.rs
bot/src/events/actions/: finalize.rs  merge.rs  mod.rs  stale.rs
bot/src/events/commands/: exclude.rs  mod.rs  pause.rs  score.rs  start.rs  unknown.rs  update.rs
bot/src/events/issue_commands/: mod.rs
bot/src/events/pr_commands/: exclude.rs  mod.rs  pause.rs  score.rs  start.rs  unknown.rs  update.rs
contest-contract/: Cargo.toml
contest-contract/src/: ext.rs  lib.rs
contract/: Cargo.toml
contract/src/: events.rs  lib.rs  migrate.rs  migration.rs  mock.rs  storage.rs  tests.rs  types.rs  views.rs
issue_creator/: hand_selected.json  issue_content.md  package-lock.json  package.json  progress.json  repositories.json  repositories_to_send.json  skipped.json
issue_creator/src/: issue_creator.mjs
server/: Cargo.toml
server/.sqlx/: query-002116e58fd3f8aa78d6c5a1727e458166e62e3aae19690bdea71d7933162dcc.json  query-01ed8afd68af9130cf1beee66116b072b8f05e2934db85bd0aa05884111a93e5.json  query-02f7e30a5c34e3318b9d58c3127ed16992b77138f681cfe312f95233c22d9f54.json  query-03d60c54fabe2b3c31df9a6c6f24c5114b4959a9df410db8a9bfd6a6bef5bd2d.json  query-06a502fc4e5f176ce836fc4c6f084b9eb65cd1b5c0ac0b5caedf6ca1e18cb72f.json  query-09411dc84f140bfa95686ac7e14c676c5f7c64f13c3039c2c63ee70dc40f9cb5.json  query-0f2d3b07bbea3a9c1aa0c06ed652314e627c1b0f328e08de2e891da2d9f0d225.json  query-11c742b3ce7ea8cfc05f8d3bb0b711fc7282d48b00a9f7c5a977aa62c505c91e.json  query-122194a677b7cc0c726947f174a8dd848cbf6ec09d5555397cda08147f38f21f.json  query-1553edd9cf0f11e111ab3dcc189f7ec93e364fd626e40db9e2269ad2c04d26a3.json  query-16f5688f235e51d2e2290f0a190d7308cd0a7b003205822f50ca5fd71c53763e.json  query-17b2393df487bb75b11bc26bfa7a63ce4d05e54fb748d94354113c1c4273e617.json  query-1db7089f1930bd418a20581b2d1ed0c49f3a1aae1e44dcb4edf2ce2d65e66ae8.json  query-1e372913d39da6d53b2ef1c5f6e82b5b812644776c228d4f3da1b44059d7e514.json  query-1e3e583599dd9070c0105d1eee21146e588bbd383e6b8fedcf8c34eb9ff01ba1.json  query-2086820ddd9a4927c28862da5bba1f322f658918f45b019f9db8b31a8bb05294.json  query-21445a827c7dacbff81bc832a019ae0cef0f1a73e77a9ff813bc746e1f36b824.json  query-239c122551416b1390303c5e54700d2007f9957fbf2852f929d3ea35cbf6cc22.json  query-252c58746e6c49897f5942bbb99ae1ff96e779dda8847c8fed1a54f561604d7b.json  query-2568152665037453c4b09a8571842ad3dcac8305ac70f95e66ad95bd82023ae4.json  query-28a821fa12f041bfa0098a33cb42135baf9071a508ee5bcdce188cf8aed7fa65.json  query-2c2f326af19143665adf083920b4b06312034c42a3a2fae869cd0d0a4bffcedd.json  query-2c34999e86fa60e57a5094eba34e32392087863806ee2138a510e6fdad3da8a1.json  query-2e7cbaee4000581fb5c34e4ef5738f5e1522bc5aff1e946b3bf0d4d19ea37267.json  query-30a16d6f56b3c3f31ae89171e6767b8e32f2b5bd59ced2671fbc3a4f6ff0a52e.json  query-351b518e126183771b384b1fabfdcc4a139db1ceb8c094dc69a792491d65261a.json  query-372e6570d05e95c58850c536362e80ac57258a34e4667c71bb83cfa1cc66910c.json  query-3a366412f033f50731f39268478625b5e5ed4d93130528b08d25db173285465d.json  query-3a683b68798c0193dc5c6a92578966f01f463a7ba52b4e0c03dfc692121c6152.json  query-3a6d252b20ad7fd73ff9decf1a5a263e8896768a74012837cb9cd85a6c01fe2e.json  query-3c4d2d65488bc4304e5528b7c83c016d284232feb8e3180873b78b5ce4e5609c.json  query-3e26d4b2d8ed6974357e167c8a1e8cf081c3c3cab937b290dd488fe5f9e399ae.json  query-418d7211bb96b937b302fe84005f467876e6d618eaea806d6729dbbe149ce972.json  query-4215feff79a7401c591abe377138ca0d185f41747644882d6f3a6776a570d921.json  query-4299f1c78d267f25d1b51eed38f3373a37eb6024b57dc207063f6f500470d461.json  query-4311e3c06d78c4e89d02f37dc509c022d556434529f8f340ac230a9c5e8e354c.json  query-43c5267303abdbb42d61fa2907b4828b68b56fba7586b38c488e9bdde89597b3.json  query-450d2f8a9521c5f72b04e9a097732ef85c15efeaeee3bcc0da0dd0aca13e7d3f.json  query-459b351657021c2d6458ed2efe4c09b84544df6f4b0d8c6cac28190d2ceb4f0c.json  query-45c584aa6a0e8cb89913c95e2ef84f85f80bb50081fdd55bed9bf45837a9e13e.json  (+84 more)
server/migrations/: 20240526132957_create-table.sql  20240605105927_prs_and_repo_data.sql  20240607131417_streak_repo_metadata.sql  20240610134020_rating.sql  20240612131906_user-cache.sql  20240701122706_streak-name.sql  20240801133345_included_at.sql  20240910124137_add_paused_field_to_repo.sql  20241028144757_score-amount.sql  20241105142153_ban_repo.sql
server/sql/: get_contribution.sql  get_hall_of_fame.sql  get_leaderboard.sql  get_leaderboard_place.sql  get_repo_leaderboard.sql  get_repos.sql  get_statistics.sql  get_streaks_for_user_id.sql  get_user_contributions.sql
server/src/: consts.rs  contract_pull.rs  db.rs  entrypoints.rs  github_pull.rs  health_monitor.rs  lib.rs  main.rs  messages.rs  svg.rs  types.rs  weekly_stats.rs
server/src/api/: mod.rs  near.rs
server/src/api/github/: mod.rs  types.rs
server/src/commands/: common.rs  exclude.rs  merged.rs  mod.rs  pause.rs  score.rs  stale.rs  start.rs  unknown.rs
server/src/commands/actions/: finalize.rs  merge.rs  mod.rs  stale.rs
server/src/db/: mod.rs  types.rs
server/src/entrypoints/: aliases.rs  leaderboards.rs  mod.rs  statistics.rs  types.rs  user.rs
server/src/events/: common.rs  mod.rs
server/src/events/actions/: finalize.rs  merge.rs  stale.rs
server/src/events/commands/: exclude.rs  mod.rs  pause.rs  score.rs  start.rs  unknown.rs
server/src/messages/: mod.rs
shared/: Cargo.toml
shared-types/: Cargo.toml
shared-types/src/: lib.rs  pr.rs  streak.rs  timeperiod.rs
shared/src/: event.rs  github.rs  lib.rs  near.rs  pr.rs  streak.rs  telegram.rs  timeperiod.rs
src/: consts.rs  main.rs
src/api/: github.rs
(+5 files in other folders)
