[workspace]
members = ["server", "contract"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "NEAR DevHub <neardevhub.org>",
    "Artur-Yurii Korchynskyi <artur.yurii.korchynskyi@gmail.com>",
]
license = ""

[workspace.dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
envy = "0.4.2"
hex = "0.4.3"
octocrab = "0.38.0"
dotenv = "0.15"
serde = "1.0.199"
tokio = "1.37.0"
env_logger = "0.11.3"
log = "0.4.21"
async-trait = "0.1.80"
near-sdk = "5.0.0"

[patch.crates-io]
octocrab = { git = "https://github.com/akorchyn/octocrab" }
