[workspace]
members = ["bot", "contract", "contest-contract", "server", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "NEAR DevHub <neardevhub.org>",
    "Artur-Yurii Korchynskyi <artur.yurii.korchynskyi@gmail.com>",
]
license = "MIT"
repository = "https://github.com/NEAR-DevHub/race-of-sloths"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false }
envy = "0.4.2"
hex = "0.4.3"
octocrab = "0.41.0"
dotenv = "0.15"
serde = "1.0"
tokio = "1.40"
env_logger = "0.11.3"
async-trait = "0.1.80"
near-sdk = "5.4.0"
near-workspaces = { version = "0.13.0", default-features = false }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3.30"
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3"
toml = "0.8"
strum = { version = "0.26", default-features = false }
tracing-subscriber = "0.3"
prometheus-client = "0.22.2"

rocket = "0.5.1"
rocket_db_pools = "0.1"
rocket_cors = '0.6'
sqlx = "0.7"
shared = { path = "shared" }
reqwest = "0.12"
base64 = "0.22.1"
usvg = "0.43.0"
rocket_prometheus = "0.10.0"
utoipa = "4.2"
utoipa-swagger-ui = "7.1"
http-body-util = "0.1"
num-format = "0.4"
resvg = "0.43.0"
tiny-skia = "0.11"
itertools = "0.13.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
