[package]
name = "slothrace-storage-contract"
description = "Slothrace storage contract"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono.workspace = true
near-sdk.workspace = true

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
tokio = { workspace = true, features = ["full"] }
