[package]
name = "race-of-sloths-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
envy.workspace = true
rocket = { workspace = true, features = ["json"] }
rocket_db_pools = { workspace = true, features = ["sqlx_postgres"] }
sqlx = { workspace = true, features = ["postgres", "macros"] }
serde.workspace = true
base64.workspace = true
reqwest.workspace = true
chrono.workspace = true

shared = { workspace = true, features = ["client"] }
