[package]
name = "race-of-sloths-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
envy.workspace = true
rocket = { workspace = true, features = ["json"] }
rocket_db_pools = { workspace = true, features = ["sqlx_postgres"] }
sqlx = { workspace = true, features = ["postgres", "macros", "chrono"] }
serde.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
usvg = { workspace = true, features = ["text"] }
resvg.workspace = true
tiny-skia.workspace = true
rocket_prometheus.workspace = true
utoipa = { workspace = true, features = ["rocket_extras", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["rocket"] }
octocrab.workspace = true
http-body-util.workspace = true
rocket_cors.workspace = true
num-format.workspace = true
tracing.workspace = true
itertools.workspace = true

shared = { workspace = true, features = ["client"] }
