[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
near-sdk.workspace = true
strum = { workspace = true, features = ["derive"] }
chrono.workspace = true

near-api = { workspace = true, optional = true }
near-primitives = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["multipart"] }
tokio = { workspace = true, optional = true, features = ["sync"] }
tracing-subscriber = { workspace = true, optional = true }

octocrab = { workspace = true, optional = true }


[features]
github = ["dep:octocrab"]
client = [
    "dep:near-api",
    "dep:near-primitives",
    "dep:anyhow",
    "dep:serde_json",
    "dep:tracing",
    "dep:reqwest",
    "dep:tokio",
    "dep:tracing-subscriber",
    "github",
]
